# POCCertificateless

./: CMakeLists.txt  POCCertificatelessCryptography.cbp  README.md  cipherPOC.c  cipherPOC.h  mainClient  mainServer  signaturePOC.c  signaturePOC.h  testAlgo
client/: mainClient.c  mainClient.h
download/: 122.eml  123.eml  124.eml
libs/binn/: libbinn.so.3.0
libs/relic-target/include/: relic_conf.h
server/: mainServer.c
test/: fullTest.c
utils/: aesUtils.c  aesUtils.h  base64.c  base64.h  socketUtils.c  socketUtils.h
